--- a/python-calss-learn-1.ipynb
+++ b/python-calss-learn-1.ipynb
@@ -15,14 +15,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### 1、1创建Dog类",
+   "source": "### 创建Dog类",
    "id": "d3649d27662f5a83"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T12:35:40.636067Z",
-     "start_time": "2025-05-13T12:35:40.632065Z"
+     "end_time": "2025-05-16T08:27:27.683072Z",
+     "start_time": "2025-05-16T08:27:27.675564Z"
     }
    },
    "cell_type": "code",
@@ -51,7 +51,7 @@
    ],
    "id": "8b64b106634e3942",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T12:45:20.091675Z",
-     "start_time": "2025-05-13T12:45:20.078771Z"
+     "end_time": "2025-05-16T08:27:27.754422Z",
+     "start_time": "2025-05-16T08:27:27.749868Z"
     }
    },
    "cell_type": "code",
@@ -84,7 +84,7 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -95,8 +95,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T12:46:48.293546Z",
-     "start_time": "2025-05-13T12:46:48.286037Z"
+     "end_time": "2025-05-16T08:27:27.767902Z",
+     "start_time": "2025-05-16T08:27:27.756392Z"
     }
    },
    "cell_type": "code",
@@ -106,31 +106,25 @@
     "# my_dog.name     #访问属性"
    ],
    "id": "fafaff152df488f9",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Willie'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T08:27:27.779413Z",
+     "start_time": "2025-05-16T08:27:27.768906Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "my_dog1 = Dog('Willi', 6)\n",
     "my_dog2 = Dog('Will', 5)\n",
     "my_dog3 = Dog('Wil', 4)     #可以创建多个实例"
    ],
-   "id": "15356cc648b7fb8d"
+   "id": "15356cc648b7fb8d",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -147,8 +141,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T12:55:39.917159Z",
-     "start_time": "2025-05-13T12:55:39.910728Z"
+     "end_time": "2025-05-16T08:27:27.786930Z",
+     "start_time": "2025-05-16T08:27:27.780416Z"
     }
    },
    "cell_type": "code",
@@ -172,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T12:55:41.682547Z",
-     "start_time": "2025-05-13T12:55:41.678548Z"
+     "end_time": "2025-05-16T08:27:27.796446Z",
+     "start_time": "2025-05-16T08:27:27.787932Z"
     }
    },
    "cell_type": "code",
@@ -202,8 +196,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T13:04:58.076277Z",
-     "start_time": "2025-05-13T13:04:58.071769Z"
+     "end_time": "2025-05-16T08:27:27.804969Z",
+     "start_time": "2025-05-16T08:27:27.797446Z"
     }
    },
    "cell_type": "code",
@@ -237,7 +231,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -248,21 +242,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T13:07:16.327573Z",
-     "start_time": "2025-05-13T13:07:16.324455Z"
+     "end_time": "2025-05-16T08:27:27.895404Z",
+     "start_time": "2025-05-16T08:27:27.891888Z"
     }
    },
    "cell_type": "code",
    "source": "my_car.odometer_counter = 110119        #直接修改",
    "id": "ba10c6bf31624e0f",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T13:20:00.142821Z",
-     "start_time": "2025-05-13T13:20:00.135334Z"
+     "end_time": "2025-05-16T08:27:27.930461Z",
+     "start_time": "2025-05-16T08:27:27.921946Z"
     }
    },
    "cell_type": "code",
@@ -301,12 +295,204 @@
        "100"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 3、继承",
+   "id": "8df9d7fea31805bb"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T08:27:27.965588Z",
+     "start_time": "2025-05-16T08:27:27.960063Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\"\"\"\n",
+    "编写一个类的特殊版本时可以使用“继承”\n",
+    "原有的类成为“父类”\n",
+    "新类成为“子类”\n",
+    "\"\"\""
+   ],
+   "id": "b75005e7b96634c3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n编写一个类的特殊版本时可以使用“继承”\\n原有的类成为“父类”\\n新类成为“子类”\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 子类的__init__()方法",
+   "id": "a9930a8f6629e49b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T08:41:11.110394Z",
+     "start_time": "2025-05-16T08:41:11.104874Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\"\"\"\n",
+    "在既有类的基础上编写类，通常要调用父类的__init__()方法，这将初始化父类init方法中定义的所有属性\n",
+    "\"\"\"\n",
+    "\n",
+    "#父类：\n",
+    "class Car:\n",
+    "    \"\"\"模拟汽车\"\"\"\n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"汽车属性\"\"\"\n",
+    "        self.make=make\n",
+    "        self.model=model\n",
+    "        self.year=year\n",
+    "        self.odometer_counter=10086     \n",
+    "    def get_descriptive_name(self):    \n",
+    "        \"\"\"返回格式规范的格式化信息\"\"\"\n",
+    "        long_name=f\"{self.make} {self.model} {self.year} {self.odometer_counter}\"       \n",
+    "        return long_name.title()       \n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"打印公里数\"\"\"\n",
+    "        print(f\"{self.odometer_counter}\")\n",
+    "    def update_odometer(self,new_odometer):\n",
+    "        \"\"\"建立update_odometer方法\"\"\"\n",
+    "        self.odometer_counter = new_odometer\n",
+    "\n",
+    "class ElectricCar(Car):                         #定义子类时，必须在括号内指定父类的名称\n",
+    "    \"\"\"模拟电动汽车作为父类“Car”的子类\"\"\"\n",
+    "    def __init__(self,make,model,year): \n",
+    "        \"\"\"初始化父类的属性\"\"\"\n",
+    "        super().__init__(make,model,year)       #super是一个特殊的函数，可以使你调用父类的方法（函数名称来源于父类称作superclass）\n",
+    "        \n",
+    "my_new_car = ElectricCar('China','BYD','2024')\n",
+    "print(my_new_car.get_descriptive_name())"
+   ],
+   "id": "ab0d860ba3deba1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "China Byd 2024 10086\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 给子类定义属性和方法",
+   "id": "a004a20a7c329f4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T08:48:38.375987Z",
+     "start_time": "2025-05-16T08:48:38.371472Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class ElectricCar(Car):                 \n",
+    "    \"\"\"模拟电动汽车作为父类“Car”的子类\"\"\"\n",
+    "    def __init__(self,make,model,year,battery_size):  \n",
+    "        \"\"\"初始化父类的属性\"\"\"\n",
+    "        super().__init__(make,model,year)       \n",
+    "        \"\"\"初始化子类特有的属性\"\"\"\n",
+    "        self.battery_size = battery_size\n",
+    "    \"\"\"初始化子类的方法\"\"\"\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"打印一条电池容量的信息\"\"\"\n",
+    "        print(f\"This Car has a {self.battery_size}-kwh battery.\")\n",
+    "my_new_car = ElectricCar('China','BYD','2024',40)\n",
+    "my_new_car.describe_battery()\n"
+   ],
+   "id": "15e545a6e4de754a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This Car has a 40-kwh battery.\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 重写父类的方法",
+   "id": "cc2b2675e999a055"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T08:55:02.427464Z",
+     "start_time": "2025-05-16T08:55:02.420456Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\"\"\"\n",
+    "如果父类原来定义的方法不能够满足需求，则可以在子类中写一个名称与父类方法一样的方法，从而覆盖掉父类原来的方法，如：覆盖掉父类get_descriptive_name(self)方法\n",
+    "\"\"\"\n",
+    "\n",
+    "class ElectricCar(Car):                       \n",
+    "    \"\"\"模拟电动汽车作为父类“Car”的子类\"\"\"\n",
+    "    def __init__(self,make,model,year): \n",
+    "        \"\"\"初始化父类的属性\"\"\"\n",
+    "        super().__init__(make,model,year)\n",
+    "        self.battery_size = 40              #暂时初始化电池容量为40\n",
+    "    def get_descriptive_name(self):    \n",
+    "        \"\"\"返回格式规范的格式化信息\"\"\"\n",
+    "        \"\"\"重写父类方法，在格式化信息中加入电池信息\"\"\"\n",
+    "        long_name=f\"{self.make} {self.model} {self.year} {self.odometer_counter} {self.battery_size}\"     \n",
+    "        return long_name.title()\n",
+    "    \n",
+    "my_new_car = ElectricCar('China','BYD','2024')\n",
+    "my_new_car.get_descriptive_name()"
+   ],
+   "id": "7be7d9d183d4dce6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'China Byd 2024 10086 40'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### 类的组合（将实利用作属性）",
+   "id": "12f6baf6825fb8d7"
   },
   {
    "metadata": {},
@@ -314,7 +500,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "acc9d43cbe984ad2"
+   "id": "678589264080632c"
   }
  ],
  "metadata": {
