--- a/python-calss-learn-1.ipynb
+++ b/python-calss-learn-1.ipynb
@@ -68,7 +68,7 @@
    },
    "cell_type": "code",
    "source": [
-    "#from jupyter_DogClass import Dog        #也可以导入别人或自己创建的类（打包成包）\n",
+    "#from jupyter_DogClass import Dog        #也可以导入别人或自己创建的类（打包成包）（后面有详细讲解）\n",
     "my_dog = Dog('Willie', 6)        #创建一个实例\n",
     "\n",
     "my_dog.name          #访问属性\n",
@@ -101,7 +101,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# import jupyter_DogClass    #也可以导入别人或自己创建的类（打包成包）\n",
+    "# import jupyter_DogClass    #也可以导入别人或自己创建的类（打包成包）在一个文件夹下\n",
     "# my_dog = jupyter_DogClass.Dog('Willie', 6)        #创建一个实例\n",
     "# my_dog.name     #访问属性"
    ],
@@ -495,12 +495,157 @@
    "id": "12f6baf6825fb8d7"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T09:20:09.421833Z",
+     "start_time": "2025-05-16T09:20:09.413664Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "678589264080632c"
+   "source": [
+    "\"\"\"如果一个类的属性和方法个数太多，可以将一些具有相同特点的属性和方法提取出来作为一个类，例如ElectricCar类，可以将有关电池的信息和方法提取出来作为单独的一个类，再将这个类的实例作为ElectricCar的属性\"\"\"\n",
+    "class Battery:\n",
+    "    def __init__(self,battery_brand,battery_size=70):       #若创建实例时未规定电池容量，则初始化为70\n",
+    "        \"\"\"定义电池的相关属性\"\"\"\n",
+    "        self.battery_size = battery_size\n",
+    "        self.battery_brand = battery_brand\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"输出电池的规范化信息\"\"\"\n",
+    "        long_name = f\"{self.battery_brand} {self.battery_size}\"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "class ElectricCar(Car):                       \n",
+    "    \"\"\"模拟电动汽车作为父类“Car”的子类\"\"\"\n",
+    "    def __init__(self,make,model,year,battery_brand): \n",
+    "        \"\"\"初始化父类的属性\"\"\"\n",
+    "        super().__init__(make,model,year)\n",
+    "        self.battery = Battery(battery_brand)\n",
+    "\n",
+    "my_new_car = ElectricCar('China','BYD','2024','宁德时代')\n",
+    "my_new_car.battery.describe_battery()"
+   ],
+   "id": "678589264080632c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'宁德时代 70'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 29
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### *将类进行封装",
+   "id": "e831da9b74e327dc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T09:36:35.730979Z",
+     "start_time": "2025-05-16T09:36:35.725607Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\"\"\"\n",
+    "封装是面向对象编程的三大特性之一（封装、继承、多态），它指的是将数据（属性）和行为（方法）包装在一个类中，并对外部隐藏实现的细节。\n",
+    "python的封装分为基本封装和更高级的封装 - 使用@property装饰器\n",
+    "此处只讲解基本封装\n",
+    "\"\"\"\n",
+    "class Car:\n",
+    "    def __init__(self, make, year):\n",
+    "        # 私有属性（以双下划线开头）\n",
+    "        self.__make = make\n",
+    "        self.__year = year\n",
+    "    \n",
+    "    # 公开方法用于访问私有属性\n",
+    "    def get_make(self):\n",
+    "        return self.__make\n",
+    "    \n",
+    "    def get_year(self):\n",
+    "        return self.__year\n",
+    "    \n",
+    "    # 公开方法用于修改私有属性\n",
+    "    def deposit(self, year):\n",
+    "        self.__year = year\n",
+    "\n",
+    "my_car = Car('Ford','BMW')      \n",
+    "#print(f\"{my_car.__make}\")   会报错：AttributeError: 'Car' object has no attribute '__make'\n",
+    "print(f\"{my_car.get_make()}\")\n",
+    "# 需要通过公开方法访问私有属性"
+   ],
+   "id": "109378a8ef0302e5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ford\n"
+     ]
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 4、导入类",
+   "id": "dcb4c1de64958ddc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-16T09:49:26.669363Z",
+     "start_time": "2025-05-16T09:49:26.662845Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\"\"\"\n",
+    "以dog类为例，此前已经编写好Dog类，将自己编写的Dog类单独打包成一个.py文件（如我打包的jupyter_DogClass.py），则有两种导入方法\n",
+    "第一种：from jupyter_DogClass import Dog\n",
+    "这种导包方法是将“jupyter_DogClass.py”中有关“Dog”类的代码导入进来，适用于一个类文件中有多个定义的类\n",
+    "\n",
+    "第二种：import jupyter_DogClass\n",
+    "这种方法则是将“jupyter_DogClass”文件全部导入进来,此时想要建立实例则需要带上包名，例如：my_dog = jupyter_DogClass.Dog()\n",
+    "\n",
+    "若想在有很多个类定义的文件中精准地导入多个类，则可以使用\n",
+    "from jupyter_DogClass import Dog1 Dog2 Dog3 ......\n",
+    "若想将类全部导入进来\n",
+    "from jupyter_DogClass import *\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "在导入类时还可以使用别名（很常用）\n",
+    "例如：from jupyter_DogClass import Dog as Dg\n",
+    "此时则可以使用 my_dog = Dg() 进行创建实例\n",
+    "又或者给整个包创建别名（也叫给模块创建别名）\n",
+    "例如：import jupyter_DogClass as JDog \n",
+    "此时 ：my_dog = jDog.Dog()\n",
+    "\"\"\"\n",
+    "#此外，python还有很多标准库，在下载python时就已经包含在内，例如：import pandas(数据分析模块)"
+   ],
+   "id": "b58400ead5970ff5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n以dog类为例，此前已经编写好Dog类，将自己编写的Dog类单独打包成一个.py文件（如我打包的jupyter_DogClass.py），则有两种导入方法\\n第一种：from jupyter_DogClass import Dog\\n这种导包方法是将“jupyter_DogClass.py”中有关“Dog”类的代码导入进来，适用于一个类文件中有多个定义的类\\n第二种：import jupyter_DogClass\\n这种方法则是将“jupyter_DogClass”文件全部导入进来，如果文件中只有一个类“Dog”则和“from jupyter_DogClass import Dog”语句效果一样，若有多个定义类，则会全部导入进来\\n\\n若想在有很多个类定义的文件中精准地导入多个类，则可以使用\\n'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 34
   }
  ],
  "metadata": {
